--- a/style.css
+++ b/style.css
@@ -4,9 +4,17 @@
   padding: 5px;
 }
 
-h2, p {
+h1, h2, p {
   margin: 10px;
-}
+  text-align: center;
+    padding: 5px;
+  font-family: "Tinos", serif;
+  font-weight: 400;
+  font-style: normal;
+  
+
+ }
+  
 
 ul {
   list-style-type: none;
@@ -42,6 +50,9 @@ ul li a.active {
 }
 
 p {
-
+  text-align: center;
   font-size: 20px;
+  color: #00d394;
+  -webkit-text-stroke: 0.4px #c03aae;
 }
+  
