--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ ul li a.active {
 p {
   text-align: center;
   font-size: 20px;
-  color: #00d394;
-  -webkit-text-stroke: 0.4px #c03aae;
+  color: #5e2626;
+  -webkit-text-stroke: 0.4px #84e219;
 }
  
 /* Constrain logo image size */
@@ -64,4 +64,3 @@ p {
   display: block;
   margin: 0;
 }
-  
